--- a/angular-frontend/src/app/rueckgabe/rueckgabe.component.html
+++ b/angular-frontend/src/app/rueckgabe/rueckgabe.component.html
@@ -71,7 +71,7 @@
                         aria-label="Notizen"></textarea>
             </ul>
         </div>
-
+          <button class="btn btn-secondary ms-3" (click)="back()">zurück</button>
           <button class="btn btn-danger m-3" (click)="keysperren()">E-Key sperren</button>
           <button class="btn btn-primary m-3" (click)="rueckgabeStarten()">Rückgabe abschließen</button>
         </div>
