--- a/angular-frontend/src/app/rueckgabe/rueckgabe.component.html
+++ b/angular-frontend/src/app/rueckgabe/rueckgabe.component.html
@@ -1,47 +1,50 @@
 <div class="container text-center">
   <div class="row justify-content-center ">
     <h1 class="mt-2 mb-3">Rückgabe</h1>
-    @if (!showAusleihe) {
+    @if (!showAusleihe&&!showResponse) {
       <div class="col col-sm-11 col-lg-7">
         <form [formGroup]="rueckgabe" (ngSubmit)="getAusleihe()">
           <div>
             <input type="radio" class="btn-check" id="option1" autocomplete="off" formControlName="rueckgabeNachMatrNr"
-                   [value]="false">
-            <label class="btn btn-outline-primary m-2 disabled" for="option1" (click)="rueckgabe.reset()">nach
+                   [value]="false" (click)="changeMode(false)">
+            <label class="btn btn-outline-primary m-2" for="option1" >nach
               KeyId</label>
 
             <input type="radio" class="btn-check" id="option2" checked autocomplete="off"
                    formControlName="rueckgabeNachMatrNr"
-                   [value]="true">
-            <label class="btn btn-outline-primary m-2" for="option2" (click)="rueckgabe.reset()">nach MatNr</label>
+                   [value]="true" (click)="changeMode(true)">
+            <label class="btn btn-outline-primary m-2" for="option2" >nach MatNr</label>
           </div>
 
           @if (rueckgabe.value.rueckgabeNachMatrNr === true) {
             <div class="input-group mb-3">
               <span class="input-group-text"><i class="bi bi-person-fill"></i></span>
               <input type="text" class="form-control" placeholder="Matrikelnummer" aria-label="atrikelnummer"
-                     formControlName="matrNr">
+                     formControlName="id">
             </div>
-            <button type="submit" class="btn btn-primary mb-3" [disabled]="!rueckgabe.valid">Weiter zur Übersicht
-            </button>
           } @else if (rueckgabe.value.rueckgabeNachMatrNr === false) {
             <div class="input-group mb-3">
               <span class="input-group-text"><i class="bi bi-key-fill"></i></span>
               <input type="text" class="form-control" placeholder="E-Key-ID" aria-label="E-Key-ID"
-                     formControlName="ekeyID">
+                     formControlName="id">
             </div>
-            <button type="submit" class="btn btn-primary mb-3" [disabled]="!rueckgabe.valid">Weiter zur Übersicht
-            </button>
+
+          }
+          @if (rueckgabe.value.rueckgabeNachMatrNr != undefined) {
+          <button type="submit" class="btn btn-primary mb-3" [disabled]="!rueckgabe.valid">Weiter zur Übersicht
+          </button>
           }
          <!-- <p>Form value: {{ rueckgabe.value | json }}</p>-->
         </form>
       </div>
 
     } @else if (showAusleihe && ausleihe == undefined) {
-      <div class="alert alert-warning">Für den Student existiert keine aktive Ausleihe</div>
-      <a href="/rückgabe">
-        <button class="btn btn-primary">Zurück</button>
-      </a>
+      <div class="alert alert-warning">Für den {{rueckgabe.value.rueckgabeNachMatrNr?"Studenten":"E-Key"}} existiert keine aktive Ausleihe</div>
+
+      <div class="d-flex justify-content-center">
+        <button class="btn btn-primary" (click)="back()">zurück</button>
+      </div>
+
     }@else if(showAusleihe && ausleihe != undefined) {
       <div>
         <div class="d-flex mb-3 mt-4 justify-content-center">
@@ -66,12 +69,21 @@
               <li
                 class="list-group-item">{{ ausleihe.letztemeldung == null ? 'unbekannt' : ausleihe.letztemeldung }}
               </li>
-              <textarea [value]="ausleihe?.notiz" class="form-control list-group-item" placeholder="Notizen"
+              <textarea [value]="ausleihe.notiz" class="form-control list-group-item" placeholder="Notizen"
                         aria-label="Notizen"></textarea>
             </ul>
         </div>
-        <button class="btn btn-primary mb-3" (click)="rueckgabeStarten()">Rückgabe abschließen</button>
+          <button class="btn btn-secondary ms-3" (click)="back()">zurück</button>
+          <button class="btn btn-danger m-3" (click)="keysperren()">E-Key sperren</button>
+          <button class="btn btn-primary m-3" (click)="rueckgabeStarten()">Rückgabe abschließen</button>
+        </div>
+    }@else if(showResponse) {
+      <div class="col col-sm-11 col-lg-7">
+        <div class="alert alert-success m-2">{{geschehen}} erfolgreich ausgeführt</div>
+        <br>
+        <a href="/" class="btn btn-primary">Zurück zum Dashboard</a>
       </div>
     }
+
   </div>
 </div>
