doku über mass import

--- a/angular-frontend/src/app/ekey-list/create-ekey-modal/create-ekey-modal.component.html
+++ b/angular-frontend/src/app/ekey-list/create-ekey-modal/create-ekey-modal.component.html
@@ -44,11 +44,12 @@
         <textarea formControlName="notiz" class="form-control" placeholder="Notizen" aria-label="Notizen"></textarea>
       </div>
 
-
+    <small class="text-secondary ">Hinweis: du kannst mehrere E-Keys mit "," getrennt gleichzeitig importieren</small>
     </div>
     <div class="modal-footer">
       <button type="submit" class="btn btn-primary" [disabled]="!ekey.valid">E-Key erstellen</button>
     </div>
+
   </form>
 </ng-template>
 
