--- a/angular-frontend/src/app/rueckgabe/rueckgabe.component.html
+++ b/angular-frontend/src/app/rueckgabe/rueckgabe.component.html
@@ -38,8 +38,8 @@
         </form>
       </div>
 
-    } @else if (showAusleihe && ausleihe == undefined) {
-      <div class="alert alert-warning">Für den {{rueckgabe.value.rueckgabeNachMatrNr?"Studenten":"E-Key"}} existiert keine aktive Ausleihe</div>
+    } @else if (showAusleihe && ausleihe == undefined && ekey == undefined) {
+      <div class="alert alert-warning"> {{rueckgabe.value.rueckgabeNachMatrNr?"Für den Studenten existiert keine aktive Ausleihe":"Dieser E-Key exisitiert nicht."}} </div>
 
       <div class="d-flex justify-content-center">
         <button class="btn btn-primary" (click)="back()">zurück</button>
@@ -77,6 +77,25 @@
           <button class="btn btn-danger m-3" (click)="keysperren()">E-Key sperren</button>
           <button class="btn btn-primary m-3" (click)="rueckgabeStarten()">Rückgabe abschließen</button>
         </div>
+    }@else if(showAusleihe && ekey != undefined) {
+      <div *ngIf="ekey.zustand=='gesperrt' && ekey.besitzer!='FSR'">
+        <!--ekey ist gesperrt gewesen -->
+        <p>Dieser E-Key war gesperrt, du kannst ihn zurück nehmen, darfst jedoch keinen Pfand auszahlen.</p>
+        <button class="btn btn-secondary ms-3" (click)="back()">zurück</button>
+        <button class="btn btn-primary m-3" (click)="zuruecknehmenVonGesperrt()">Zurück nehmen</button>
+
+      </div>
+
+      <div *ngIf="ekey.zustand!='gesperrt'||ekey.zustand=='gesperrt' && ekey.besitzer=='FSR'">
+        <!--ekey ist gesperrt gewesen -->
+        <div class="alert alert-warning"> Für diesen E-Key existiert aktuell keine Ausleihe! </div>
+
+        <div class="d-flex justify-content-center">
+          <button class="btn btn-primary" (click)="back()">zurück</button>
+        </div>
+      </div>
+
+
     }@else if(showResponse) {
       <div class="col col-sm-11 col-lg-7">
         <div class="alert alert-success m-2">{{geschehen}} erfolgreich ausgeführt</div>
