generierung von zu entsperrenden ids

--- a/angular-frontend/src/app/dashboard/dashboard.component.html
+++ b/angular-frontend/src/app/dashboard/dashboard.component.html
@@ -32,7 +32,7 @@
         <div class="card-body">
           <h5 class="card-title">Gesperrte Keys: {{gesperrtTresorKeycount}}</h5>
           <p class="card-text">Diese Keys könnten entsperrt werden (bei so ca.20 lohnt es sich)</p>
-          <a href="/#" class="btn btn-primary">Liste generieren</a>
+          <button class="btn btn-primary" (click)="listeGenerieren()">Liste generieren</button>
         </div>
       </div>
 
