--- a/angular-frontend/src/app/ekey-list/ekey-list.component.html
+++ b/angular-frontend/src/app/ekey-list/ekey-list.component.html
@@ -1,4 +1,5 @@
-<div class="d-flex justify-content-end mt-3 mb-3">
+<div class="d-flex justify-content-between mt-3 mb-3">
+  <app-entsperr-ekey-modal></app-entsperr-ekey-modal>
   <app-create-ekey-modal></app-create-ekey-modal>
 </div>
 
