--- a/angular-frontend/src/app/kasse/abbuchen-modal/abbuchen-modal.component.html
+++ b/angular-frontend/src/app/kasse/abbuchen-modal/abbuchen-modal.component.html
@@ -8,7 +8,7 @@
     <div class="modal-body">
       <div class="input-group mb-3">
         <span class="input-group-text" id="basic-addon1"><i class="bi bi-key-fill"></i></span>
-        <input formControlName="wert" type="text" class="form-control" placeholder="geld" aria-label="E-Key-ID">
+        <input formControlName="wert" type="number" class="form-control" placeholder="geld" aria-label="E-Key-ID" min="1" max="{{maxammount}}">
       </div>
 
       <div class="input-group">
@@ -18,11 +18,18 @@
 
 
     </div>
-    <div class="modal-footer">
+    <div class="modal-footer d-flex justify-content-around">
+      <div class="col-4">
+      <p *ngIf="abbuchungForm.value.wert===null||abbuchungForm.value.wert!<0">Bitte gib einen Betrag >0 an!</p>
+      <p *ngIf="maxammount!<abbuchungForm.value.wert!">Bitte bleib unter {{maxammount}}€!</p>
+      <p *ngIf="abbuchungForm.value.notiz==''">Bitte gib einen Verwendungszweck an!</p>
+      </div>
+      <div class="col-2">
       <button type="submit" class="btn btn-primary" [disabled]="!abbuchungForm.valid">Abbuchung durchführen</button>
+    </div>
     </div>
   </form>
 </ng-template>
 
-<button class="btn btn-primary" (click)="open(content)">Aus freiem Budget abbuchen</button>
+<button class="btn btn-secondary m-2" (click)="open(content)">Aus freiem Budget abbuchen</button>
 
