--- a/angular-frontend/src/app/navbar/navbar.component.html
+++ b/angular-frontend/src/app/navbar/navbar.component.html
@@ -28,6 +28,9 @@
         <li>
           <a class="nav-link" href="/kasse">Kasse</a>
         </li>
+        <li>
+          <a class="nav-link" href="/kassenfuehrung">Kassenfuehrung</a>
+        </li>
 
       </ul>
       <div class="d-flex flex-column">
