--- a/angular-frontend/src/app/ausleihe/ausleihe.component.html
+++ b/angular-frontend/src/app/ausleihe/ausleihe.component.html
@@ -6,6 +6,7 @@
       @if (step==0) {
       <form (ngSubmit)="onStudentsubmit()" [formGroup]="student" #form="ngForm" class="form">
         <div class="form-group">
+          <div class="alert alert-danger" *ngIf="error">{{ error }}</div>
 
           <div class="input-group has-validation">
             <span class="input-group-text"><i class="bi bi-person-fill"></i></span>
