--- a/vertragseite/css/style.css
+++ b/vertragseite/css/style.css
@@ -3,7 +3,7 @@
 }
 
 @media print
-{    
+{
     .no-print, .no-print *
     {
         display: none !important;
@@ -12,7 +12,7 @@
 
 .printlink {
     position: absolute;
-    top: 0px;
+    top: 0;
     left: 100mm
 }
 
