--- a/angular-frontend/src/app/ausleihe/ausleihe.component.html
+++ b/angular-frontend/src/app/ausleihe/ausleihe.component.html
@@ -91,6 +91,7 @@
             <li class="list-group-item">Mail</li>
             <li class="list-group-item">Matrikelnummer</li>
             <li class="list-group-item">E-Key-ID</li>
+            <li class="list-group-item">Berechtigung</li>
           </ul>
           <ul class="list-group">
             <li class="list-group-item">{{ student.value.vorname }}</li>
@@ -98,6 +99,7 @@
             <li class="list-group-item">{{ student.value.email }}</li>
             <li class="list-group-item">{{ student.value.matrnr }}</li>
             <li class="list-group-item">{{ prozessInfos.value.ekeyid }}</li>
+            <li class="list-group-item">{{ prozessInfos.value.berechtigung }}</li>
           </ul>
         </div>
 
