--- a/angular-frontend/src/app/rueckgabe/rueckgabe.component.html
+++ b/angular-frontend/src/app/rueckgabe/rueckgabe.component.html
@@ -1,25 +1,25 @@
 <div class="container text-center">
   <div class="row justify-content-center ">
     <h1 class="mt-2 mb-3">Rückgabe</h1>
-    @if (!showAusleihe&&!showResponse) {
+    @if (!showAusleiheDetails) {
       <div class="col col-sm-11 col-lg-7">
         <form [formGroup]="rueckgabe" (ngSubmit)="getAusleihe()">
           <div>
             <input type="radio" class="btn-check" id="option1" autocomplete="off" formControlName="rueckgabeNachMatrNr"
                    [value]="false" (click)="changeMode(false)">
-            <label class="btn btn-outline-primary m-2" for="option1" >nach
+            <label class="btn btn-outline-primary m-2" for="option1">nach
               KeyId</label>
 
             <input type="radio" class="btn-check" id="option2" checked autocomplete="off"
                    formControlName="rueckgabeNachMatrNr"
                    [value]="true" (click)="changeMode(true)">
-            <label class="btn btn-outline-primary m-2" for="option2" >nach MatNr</label>
+            <label class="btn btn-outline-primary m-2" for="option2">nach MatNr</label>
           </div>
 
           @if (rueckgabe.value.rueckgabeNachMatrNr === true) {
             <div class="input-group mb-3">
               <span class="input-group-text"><i class="bi bi-person-fill"></i></span>
-              <input type="text" class="form-control" placeholder="Matrikelnummer" aria-label="atrikelnummer"
+              <input type="text" class="form-control" placeholder="Matrikelnummer" aria-label="Matrikelnummer"
                      formControlName="id">
             </div>
           } @else if (rueckgabe.value.rueckgabeNachMatrNr === false) {
@@ -31,21 +31,15 @@
 
           }
           @if (rueckgabe.value.rueckgabeNachMatrNr != undefined) {
-          <button type="submit" class="btn btn-primary mb-3" [disabled]="!rueckgabe.valid">Weiter zur Übersicht
-          </button>
+            <button type="submit" class="btn btn-primary mb-3" [disabled]="!rueckgabe.valid">Weiter zur Übersicht
+            </button>
           }
-         <!-- <p>Form value: {{ rueckgabe.value | json }}</p>-->
+          <!-- <p>Form value: {{ rueckgabe.value | json }}</p>-->
         </form>
       </div>
 
-    } @else if (showAusleihe && ausleihe == undefined && ekey == undefined) {
-      <div class="alert alert-warning"> {{rueckgabe.value.rueckgabeNachMatrNr?"Für den Studenten existiert keine aktive Ausleihe":"Dieser E-Key exisitiert nicht."}} </div>
 
-      <div class="d-flex justify-content-center">
-        <button class="btn btn-primary" (click)="back()">zurück</button>
-      </div>
-
-    }@else if(showAusleihe && ausleihe != undefined) {
+    } @else if (showAusleiheDetails && ausleihe != undefined) {
       <div>
         <div class="d-flex mb-3 mt-4 justify-content-center">
           <ul class="list-group text-start">
@@ -59,48 +53,31 @@
             <li class="list-group-item">Notiz</li>
           </ul>
 
-            <ul class="list-group text-start">
-              <li class="list-group-item">{{ ausleihe.ausleihnr }}</li>
-              <li class="list-group-item">{{ ausleihe.ekeyid }}</li>
-              <li class="list-group-item">{{ ausleihe.matrnr }}</li>
-              <li class="list-group-item">{{ ausleihe.beginn }}</li>
-              <li class="list-group-item">{{ ausleihe.ende == null ? 'unbekannt' : ausleihe.ende }}</li>
-              <li class="list-group-item">{{ ausleihe.hat_studienbescheinigung ? 'vorhanden' : 'nicht vorhanden' }}</li>
-              <li
-                class="list-group-item">{{ ausleihe.letztemeldung == null ? 'unbekannt' : ausleihe.letztemeldung }}
-              </li>
-              <textarea [value]="ausleihe.notiz" class="form-control list-group-item" placeholder="Notizen"
-                        aria-label="Notizen"></textarea>
-            </ul>
+          <ul class="list-group text-start">
+            <li class="list-group-item">{{ ausleihe.ausleihnr }}</li>
+            <li class="list-group-item">{{ ausleihe.ekeyid }}</li>
+            <li class="list-group-item">{{ ausleihe.matrnr }}</li>
+            <li class="list-group-item">{{ ausleihe.beginn }}</li>
+            <li class="list-group-item">{{ ausleihe.ende == null ? 'unbekannt' : ausleihe.ende }}</li>
+            <li class="list-group-item">{{ ausleihe.hat_studienbescheinigung ? 'vorhanden' : 'nicht vorhanden' }}</li>
+            <li
+              class="list-group-item">{{ ausleihe.letztemeldung == null ? 'unbekannt' : ausleihe.letztemeldung }}
+            </li>
+            <textarea [value]="ausleihe.notiz" class="form-control list-group-item" placeholder="Notizen"
+                      aria-label="Notizen"></textarea>
+          </ul>
         </div>
-          <button class="btn btn-secondary ms-3" (click)="back()">zurück</button>
-          <button class="btn btn-danger m-3" (click)="keysperren()">E-Key sperren</button>
-          <button class="btn btn-primary m-3" (click)="rueckgabeStarten()">Rückgabe abschließen</button>
-        </div>
-    }@else if(showAusleihe && ekey != undefined) {
+        <button class="btn btn-secondary ms-3" (click)="back()">zurück</button>
+        <button class="btn btn-danger m-3" (click)="keysperren()">E-Key sperren</button>
+        <button class="btn btn-primary m-3" (click)="rueckgabeStarten()">Rückgabe abschließen</button>
+      </div>
+    } @else if (showAusleiheDetails && ekey != undefined) {
       <div *ngIf="ekey.zustand=='gesperrt' && ekey.besitzer!='FSR'">
         <!--ekey ist gesperrt gewesen -->
         <p>Dieser E-Key war gesperrt, du kannst ihn zurück nehmen, darfst jedoch keinen Pfand auszahlen.</p>
         <button class="btn btn-secondary ms-3" (click)="back()">zurück</button>
         <button class="btn btn-primary m-3" (click)="zuruecknehmenVonGesperrt()">Zurück nehmen</button>
 
-      </div>
-
-      <div *ngIf="ekey.zustand!='gesperrt'||ekey.zustand=='gesperrt' && ekey.besitzer=='FSR'">
-        <!--ekey ist gesperrt gewesen -->
-        <div class="alert alert-warning"> Für diesen E-Key existiert aktuell keine Ausleihe! </div>
-
-        <div class="d-flex justify-content-center">
-          <button class="btn btn-primary" (click)="back()">zurück</button>
-        </div>
-      </div>
-
-
-    }@else if(showResponse) {
-      <div class="col col-sm-11 col-lg-7">
-        <div class="alert alert-success m-2">{{geschehen}} erfolgreich ausgeführt</div>
-        <br>
-        <a href="/" class="btn btn-primary">Zurück zum Dashboard</a>
       </div>
     }
 
