--- a/angular-frontend/src/app/ausleihe/ausleihe.component.html
+++ b/angular-frontend/src/app/ausleihe/ausleihe.component.html
@@ -111,7 +111,7 @@
         </div>
         <div class="d-flex justify-content-between ">
         <button class="btn btn-secondary ms-3" (click)="step=step-1">zurück</button>
-        <button class="btn btn-secondary ms-3"  (click)="openPrinter()"><i class="bi bi-printer"></i> Druck erneut öffnen</button>
+        <button class="btn btn-secondary ms-3" type="button" (click)="openPrinter()"><i class="bi bi-printer"></i> Druck erneut öffnen</button>
         <button class="btn btn-primary ms-3" type="submit"> Ausleihe druchführen</button>
         </div>
       </form>
