--- a/angular-frontend/src/app/ausleihe/ausleihe.component.html
+++ b/angular-frontend/src/app/ausleihe/ausleihe.component.html
@@ -74,7 +74,7 @@
             <label>E-Key-ID</label>
           </div>
           <div class="invalid-feedback" *ngIf="prozessInfos.controls.ekeyid.invalid">
-            9 Zeichen
+            5-9 Zeichen
           </div>
         </div>
         <div class="d-flex justify-content-between ">
