--- a/angular-frontend/src/app/ekey-list/create-ekey-modal/create-ekey-modal.component.html
+++ b/angular-frontend/src/app/ekey-list/create-ekey-modal/create-ekey-modal.component.html
@@ -8,7 +8,7 @@
   <div class="modal-body">
       <div class="input-group mb-3">
         <span class="input-group-text" id="basic-addon1"><i class="bi bi-key-fill"></i></span>
-        <input formControlName="ekeyid" type="text" class="form-control" placeholder="E-Key-ID" aria-label="E-Key-ID">
+        <input formControlName="ekeyid" type="text" class="form-control" placeholder="E-Key-ID (5-9 Zeichen)" aria-label="E-Key-ID">
       </div>
 
       <div class="input-group mb-3">
